--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Home.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Home.xaml
@@ -9,16 +9,16 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="0.6*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Image  Grid.Row="0" Source="rain.jpg" Margin="2" />
+        <Image Grid.Row="0" Source="rain.jpg" Margin="5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
         <StackLayout Grid.Row="1" Orientation="Vertical" >
-            <Label Text="Dit Applicatie is gemaakt om de regen te voorspellen doormiddel van de SensorTag. Op basis van de luchtdruk en vochtgehalte wordt er gekeken of er kans is op neerslag." Margin="5" FontSize="13" FontFamily="Arial" HorizontalTextAlignment="Start" TextColor="{StaticResource text}"/>
+            <Label Text="Dit Applicatie is gemaakt om de regen te voorspellen doormiddel van de SensorTag. Op basis van de luchtdruk en vochtgehalte wordt er gekeken of er kans is op neerslag." FontSize="13" FontFamily="Arial" HorizontalTextAlignment="Start" TextColor="{StaticResource text}"/>
             <Button x:name="logInButton" Text="Log In" Clicked="Login_Click"/>
             <Button x:name="registerButton" Text="Register" Clicked="Register_Click"/>
         </StackLayout>
-        <StackLayout Grid.Row="1" Orientation="Horizontal" BackgroundColor="{StaticResource menu}" Spacing="10" Padding="10">
+        <StackLayout Grid.Row="2" Orientation="Horizontal" BackgroundColor="{StaticResource menu}" Spacing="10" Padding="10">
             <Button x:name="HomeButton" Text="Kans op Regen?" />
             <Button x:name="HomeButton" Text="SensorTag" Clicked="ConnectSensorTag_Click"/>
         </StackLayout>
