--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/SensorTagDetail.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/SensorTagDetail.xaml
@@ -4,11 +4,9 @@
              x:Class="ProjectEnt_SensorTag.Views.SensorTagDetail">
     <ContentPage.Content>
         <ScrollView>
-            <Image Source="sensortag-img-bluetooth.png" />
-            <TextBlock>
-                         <Run Text="SensorTag" />
-                         <Run Text="{Binding ID}" />
-            </TextBlock>
+            <Image Source="sensortag.png" />
+            <Label Text="{Binding Device.Name}" />
+            <Button Command="{Binding conntectToService}" Text="Verbinding Maken" />
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
