--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/SensorTagOverview.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/SensorTagOverview.xaml
@@ -2,10 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProjectEnt_SensorTag.Views.SensorTagOverview"
+             xmlns:b="clr-namespace:Xamarin.Behaviors;assembly=Xamarin.Behaviors"
              Title="Sensor Tag List">
   <ContentPage.Content>
         <StackLayout>
-            <ListView x:Name="sensorTagList" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" ItemsSource="{Binding DeviceList}" SelectedItem="{Binding SelectSensorTag}">
+            <ListView x:Name="sensorTagList" VerticalOptions="StartAndExpand" HorizontalOptions="StartAndExpand" ItemsSource="{Binding DeviceList}" SelectedItem="{Binding Device}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextCell Text="{Binding Name}" />
