--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Home.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Home.xaml
@@ -13,11 +13,9 @@
             <RowDefinition Height="0.6*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Image Grid.Row="0" Source="rain.jpg" Margin="5" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+        <Image Grid.Row="0" Source="rain.jpg" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
         <StackLayout Grid.Row="1" Orientation="Vertical" >
             <Label Text="Dit Applicatie is gemaakt om de regen te voorspellen doormiddel van de SensorTag. Op basis van de luchtdruk en vochtgehalte wordt er gekeken of er kans is op neerslag." FontSize="13" FontFamily="Arial" HorizontalTextAlignment="Start" TextColor="{StaticResource text}"/>
-            <Button x:name="logInButton" Command="{Binding LogIn}" Text="Log In" />
-            <Button x:name="registerButton" Command="{Binding Register}" Text="Register" />
         </StackLayout>
         <StackLayout Grid.Row="2" Orientation="Horizontal" BackgroundColor="{StaticResource menu}" Spacing="10" Padding="10">
             <Button x:name="RegenButton" Text="Kans op Regen?" Command="{Binding Regen}" />
