--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/App.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/App.xaml
@@ -5,4 +5,10 @@
     xmlns:local="using:ProjectEnt_SensorTag.UWP"
     RequestedTheme="Light">
 
+    <Application.Resources>
+        <ResourceDictionary>
+            <local:ViewModelLocator x:Key="MainViewModelLocator"/>
+            
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
