--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/Views/OverviewView.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/Views/OverviewView.xaml
@@ -9,6 +9,69 @@
     DataContext="{Binding Source={StaticResource MainViewModelLocator}, Path=OverviewViewModel}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Overview" FontSize="200"/>
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1050" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="titleTextBlock.FontSize" Value="70"/>
+                        <Setter Target="newPasswordTextBlock.FontSize" Value="50"/>
+                        <Setter Target="confirmPasswordTextBlock.FontSize" Value="50"/>
+                        <Setter Target="confirmTextbox.FontSize" Value="50"/>
+                        <Setter Target="passwordTextbox.FontSize" Value="50"/>
+                        <Setter Target="changeButton.FontSize" Value="50"/>
+                        <Setter Target="confirmTextbox.Width" Value="500"/>
+                        <Setter Target="passwordTextbox.Width" Value="500"/>
+                    </VisualState.Setters>
+                </VisualState>
+
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="800" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="titleTextBlock.FontSize" Value="60"/>
+                        <Setter Target="newPasswordTextBlock.FontSize" Value="40"/>
+                        <Setter Target="confirmPasswordTextBlock.FontSize" Value="40"/>
+                        <Setter Target="confirmTextbox.FontSize" Value="40"/>
+                        <Setter Target="passwordTextbox.FontSize" Value="40"/>
+                        <Setter Target="changeButton.FontSize" Value="40"/>
+                        <Setter Target="confirmTextbox.Width" Value="300"/>
+                        <Setter Target="passwordTextbox.Width" Value="300"/>
+                    </VisualState.Setters>
+                </VisualState>
+
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="100" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="titleTextBlock.FontSize" Value="40"/>
+                        <Setter Target="newPasswordTextBlock.FontSize" Value="20"/>
+                        <Setter Target="confirmPasswordTextBlock.FontSize" Value="20"/>
+                        <Setter Target="confirmTextbox.FontSize" Value="20"/>
+                        <Setter Target="passwordTextbox.FontSize" Value="20"/>
+                        <Setter Target="changeButton.FontSize" Value="20"/>
+                        <Setter Target="confirmTextbox.Width" Value="100"/>
+                        <Setter Target="passwordTextbox.Width" Value="100"/>
+                    </VisualState.Setters>
+                </VisualState>
+                
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
+
+        <RelativePanel>
+            <Grid x:Name="CenterGrid" RelativePanel.AlignHorizontalCenterWithPanel="True" />
+            <TextBlock Name="titleTextBlock" Text="Change Password" RelativePanel.AlignHorizontalCenterWithPanel="True"/>
+            <TextBlock Name="newPasswordTextBlock"  RelativePanel.LeftOf="CenterGrid" Text="New password:" RelativePanel.Below="titleTextBlock"/>
+            <TextBlock Name="confirmPasswordTextBlock" Margin="0,50"  RelativePanel.LeftOf="CenterGrid" Text="Confirm new password:" RelativePanel.Below="newPasswordTextBlock"/>
+            <TextBox Name="passwordTextbox" Width="500" RelativePanel.RightOf="CenterGrid" RelativePanel.AlignVerticalCenterWith="newPasswordTextBlock" RelativePanel.AlignLeftWith="confirmTextbox"/>
+            <TextBox Name="confirmTextbox" Width="500" RelativePanel.RightOf="confirmPasswordTextBlock" RelativePanel.AlignVerticalCenterWith="confirmPasswordTextBlock"/>
+            <Button Name="changeButton" RelativePanel.Below="confirmPasswordTextBlock" RelativePanel.AlignHorizontalCenterWithPanel="True">Change password</Button>
+        </RelativePanel>
     </Grid>
 </Page>
