--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Regen.xaml
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/Views/Regen.xaml
@@ -3,24 +3,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProjectEnt_SensorTag.Views.Regen">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Margin="5" >
             <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                 <Label Text="De temperature is: " />
                 <Label Text="{Binding SensorTag.TemperatureSensor.Temperature.TemperatureAmount}" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                 <Label Text="Fahrenheit " />
                 <Label Text="{Binding SensorTag.TemperatureSensor.Temperature.TemperatureAmount, Converter={StaticResource FahrenheitConverter}}" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                 <Label Text="Kelvin " />
                 <Label Text="{Binding SensorTag.TemperatureSensor.Temperature.TemperatureAmount, Converter={StaticResource KelvinConverter}}" />
             </StackLayout>
             <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                 <Label Text="De Humidity is: " />
                 <Label Text="{Binding SensorTag.HumiditySensor.Humidity.HumidityAmount}" />
-            </StackLayout>
+            </StackLayout> 
             <StackLayout Orientation="Horizontal" VerticalOptions="Center">
                 <Button Command="{Binding GetTemp}" Text="Haal Temperature" />
                 <Button Command="{Binding GetHumidity}" Text="Haal Humidity" />
             </StackLayout>
             <Button x:Name="getInfoButton" Command="{Binding GetInfo,Mode=TwoWay}" Text="Verstuur naar de server" />
+            <Label Text="Ja het gaat regenen vandaag" FontSize="Medium" IsVisible="{Binding Visible}" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
